<resources>
    <string name="app_name" translatable="false">MyCoins</string>
    <string name="copyright" translatable="false">©2016 &#8211; 2019 GuepardoApps (Jonas Schubert)</string>

    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="addPlus" translatable="false">+</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="sum">Sum</string>

    <string name="prompt">Prompt</string>
    <string name="ok">OK</string>
    <string name="neutral">Neutral</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="example">Example</string>
    <string name="short_example">Example</string>
    <string name="contentDescription">This is a image</string>

    <string name="prompt_coin_type">Coin type</string>
    <string name="prompt_coin_amount">Coin amount</string>
    <string name="prompt_coin_additionalInformation">Additional information</string>
    <string name="prompt_currency_preferred">Preferred Currency (EUR/USD)</string>

    <string name="error_field_invalid_date">This date is not valid</string>
    <string name="error_nothing_changed">Nothing changed</string>
    <string name="error_field_required">This field is required</string>

    <string name="successfully_saved">Successfully saved</string>
    <string name="successfully_added">Successfully added</string>
    <string name="successfully_updated">Successfully updated</string>

    <string name="about">About</string>
    <string name="author_title">Author</string>
    <string name="author" translatable="false">Jonas Schubert\nGuepardoApps</string>
    <string name="version_title">Version</string>
    <string name="version" translatable="false">2.2.0.190810</string>
    <string name="email_title">Mail</string>
    <string name="email" translatable="false">guepardoapps@gmail.com</string>
    <string name="gitHubLink_title" translatable="false">GitHub</string>
    <string name="gitHubLink" translatable="false">https://github.com/GuepardoApps-Releases/MyCoins/</string>
    <string name="homepageLink_title" translatable="false">Homepage</string>
    <string name="homepageLink" translatable="false">https://guepardoapps.github.io/</string>
    <string name="special_thanks_title" translatable="false">Special thanks</string>
    <string name="special_thanks" translatable="false">I want to thank my lovely wife for always supporting me and helping me to improve this application! நான் உன்னை காதலிக்கிறேன்</string>
</resources>
