<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    app:bbn_badgeColor="@color/colorPrimaryDark"
    app:bbn_rippleColor="@color/Accent">
    <item
        android:id="@+id/item_add"
        android:color="@color/colorPrimary"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add" />
    <item
        android:id="@+id/item_settings"
        android:color="@color/colorPrimary"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
    <item
        android:id="@+id/item_about"
        android:color="@color/colorPrimary"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />
</menu>