<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp"
    tools:context=".activities.ActivityEdit">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coin_TypeInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true">

                <AutoCompleteTextView
                    android:id="@+id/coin_type_edit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_coin_type"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:nextFocusRight="@+id/coin_amount_edit_textview"
                    android:nextFocusDown="@+id/coin_amount_edit_textview"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coin_AmountInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coin_TypeInputLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/coin_amount_edit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_coin_amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:nextFocusRight="@+id/coin_additionalInformation_edit_textview"
                    android:nextFocusDown="@+id/coin_additionalInformation_edit_textview"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coin_AdditionalInformationInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coin_AmountInputLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/coin_additionalInformation_edit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_coin_additionalInformation"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusRight="@+id/save_coin_edit_button"
                    android:nextFocusDown="@+id/save_coin_edit_button"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/save_coin_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@drawable/baseline_save_white_48"
                app:fab_radius="17dp"
                app:rd_backgroundColor="@color/DarkPrimary"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorAccent"
                app:rd_rippleType="touch" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>