<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="guepardoapps.mycoins.activities.CoinEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:padding="5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/coinType_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <AutoCompleteTextView
                        android:id="@+id/coin_edit_type_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_coin_type"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/coin_edit_amount_textview"
                        android:nextFocusRight="@+id/coin_edit_amount_textview"
                        android:textColor="@color/TextIcon" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/coinAmount_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/coinType_TextInputLayout">

                    <EditText
                        android:id="@+id/coin_edit_amount_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_coin_amount"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/save_coin_edit_button"
                        android:nextFocusRight="@+id/save_coin_edit_button"
                        android:textColor="@color/TextIcon" />

                </android.support.design.widget.TextInputLayout>

                <com.rey.material.widget.Button
                    android:id="@+id/save_coin_edit_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/save"
                    android:textColor="@color/colorTextIcon"
                    android:textStyle="bold"
                    app:rd_delayClick="none"
                    app:rd_enable="true"
                    app:rd_rippleColor="@color/colorPrimary"
                    app:rd_rippleType="touch" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_coin_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
